client/stylesheets/styles.css
.panel {
  position: relative;
  margin-top: 1.5em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  box-shadow: 0 2.2px 2.2px 0px rgba(0, 0, 0, 0.2);
  background-color: #FCFCFC;
}

.content-custom {
  margin-top: 3.5em;
}

.cool-banner {
  background-color: rgb(138, 205, 138);
  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.25);
}

.form-control:focus {
  border-color: #3e5e3e;
  box-shadow: none !important;
}

#follow-button, #unfollow-button {
  margin-top: -3.3em;
}

/* Bootstrap Reset to Flat */

.form-control {
  border-top-width: 0;
  border-left-width: 0;
  border-right-width: 0;
  border-color: #95A4A5;
  border-radius: 0;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: nonene;
}

.btn {
  border-radius: 0;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

textarea:focus,
input[type="text"]:focus,
input[type="password"]:focus,
input[type="datetime"]:focus,
input[type="datetime-local"]:focus,
input[type="date"]:focus,
input[type="month"]:focus,
input[type="time"]:focus,
input[type="week"]:focus,
input[type="number"]:focus,
input[type="email"]:focus,
input[type="url"]:focus,
input[type="search"]:focus,
input[type="tel"]:focus,
input[type="color"]:focus,
.uneditable-input:focus {
  outline: 0;
  box-shadow: none;
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
}

.btn:focus {
  outline: 0;
  box-shadow: none;
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
}

